--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1"
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "8.2.2",
+    "webpack": "5.11.1",
+    "webpack-cli": "4.3.1"
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
