--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack --watch --mode=development"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +15,10 @@
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "8.2.2",
+    "html-webpack-plugin": "^4.5.1",
     "webpack": "5.11.1",
-    "webpack-cli": "4.3.1"
+    "webpack-cli": "4.3.1",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
