--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "8.2.2",
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "style-loader": "^2.0.0",
     "webpack": "5.11.1",
     "webpack-cli": "4.3.1",
     "webpack-dev-server": "^3.11.1",
