--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.prod.js",
-    "dev": "webpack serve --open --config webpack.config.dev.js"
+    "dev": "webpack serve --open --config webpack.config.dev.js",
+    "dev:hot": "npm run dev -- --hot"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "html-webpack-plugin": "^4.5.1",
     "style-loader": "^2.0.0",
     "webpack": "5.11.1",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "4.3.1",
     "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^5.7.3"
@@ -27,6 +29,7 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0"
   }
 }
