--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
