--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack serve --open --config webpack.config.dev.js",
     "dev:hot": "npm run dev -- --hot"
@@ -20,6 +20,7 @@
     "babel-loader": "8.2.2",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
     "style-loader": "^2.0.0",
     "webpack": "5.11.1",
     "webpack-bundle-analyzer": "^4.3.0",
