--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
     "babel-loader": "8.2.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
