--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "babel-loader": "8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "css-loader": "^5.0.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
+    "husky": "^4.3.7",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
@@ -41,5 +45,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   }
 }
