chore: update husky commands

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "pretty-quick --staged && npm test"
     }
   }
 }
