--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "react-axe": "^3.5.4",
     "style-loader": "^2.0.0",
     "webpack": "5.11.1",
     "webpack-bundle-analyzer": "^4.3.0",
